# ShadowWallet

./: README.md  package-lock.json  package.json
backend/: .env.example  package.json
backend/src/: index.js
backend/src/routes/: analyze.js  insight.js  reputation.js  simulate.js
backend/src/services/: gemini.js
extension/: manifest.json  package.json  vite.config.js
extension/src/background/: index.js
extension/src/content/: index.js
extension/src/injected/: index.js
extension/src/popup/: App.jsx  index.css  index.html
landing/: index.html  package.json
landing/src/: App.jsx  index.css
landing/src/components/: Architecture.jsx  CTA.jsx  Dashboard.jsx  Features.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  InstallGuide.jsx  Navbar.jsx  Partners.jsx  Stats.jsx
mock-dapp/: index.html
program/: Cargo.toml
program/programs/shadow_registry/: Cargo.toml
program/programs/shadow_registry/src/: lib.rs
